--- a/destinations-trinco.html
+++ b/destinations-trinco.html
@@ -130,7 +130,7 @@
       </div>
     </div>
   </div>
-    <div class="navigation"> Destinations  <br>  <i id="float-arrow" class="fa fa-chevron-down"></i> </div>
+    <div class="navigation"> Destinations </div>
 <nav class="float-nav closed">
   <ul>
     <li><a href="#">Kandy</a></li>
