Destination Menu Label adding

--- a/destinations-trinco.html
+++ b/destinations-trinco.html
@@ -5,7 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 <meta name="description" content="">
 <meta name="author" content="">
 <title>Splenor Tours</title>
@@ -21,7 +20,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body style="background:url(img/bg-header-15.jpg) no-repeat;">
+<body class="trinco-bg">
 <div class="wrapper"> 
   <!-- ******HEADER****** -->
 <header id="header" class="header">
@@ -130,7 +129,8 @@
       </div>
     </div>
   </div>
-    <div class="navigation"> Destinations </div>
+    <div class="navigation">
+        <img src="img/navigate.png" alt="navigate_img"> </div>
 <nav class="float-nav closed">
   <ul>
     <li><a href="#">Kandy</a></li>
